environments/gloo-gateway/gateway-api/live/gateway-api-config/base/argocd-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-https
  namespace: argocd
  labels:
    example: argocd-route
    gateway: https
spec:
  hostnames:
  - "argocd.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: argocd-server
          port: 443
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: argocd-route-policies
