environments/gloo-gateway/gateway-api/live/gateway-api-config/base/host-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: glooplatform-redirect
  namespace: gloo-system
spec:
  parentRefs:
    - name: https
      namespace: gloo-system
  hostnames:
    - glooplatform.com
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          hostname: "demo.glooplatform.com"
          statusCode: 302
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: host-redirect-route-policies
