environments/gloo-gateway/gateway-api/live/gateway-api-config/base/kiali-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kiali-https
  namespace: istio-system
  labels:
    example: kiali-route
    gateway: https
spec:
  hostnames:
  - "kiali.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: kiali
          port: 20001
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: kiali-route-policies
